backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studentapp
  labels:
    app: tej-app
spec:
  template:
    metadata:
      labels:
        app: tej-app
    spec:
      containers:
        - name: app-container
          image: tejaspatil19/3tier-backend-kubernetes:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 400m
              memory: 200Mi
  replicas: 3
  selector:
    matchLabels:
      app: tej-app
  strategy:
    type: RollingUpdate
...
---
apiVersion: v1
kind: Service
metadata:
  name: threetier-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: tej-app
...
