backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: backend-service
      port:
        number: 8080
  rules:
    - host: "NODEIP:NODEPORT"
      http:
        paths:
        - path: /student
          pathType: Prefix
          backend:
            service:
              name: student
              port:
                number: 8080
